mod_http2: fixes a mem corruption when streams/connections terminated before tasks returned
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1747170 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: fixed a write after free when streams/connections
+     were aborted before tasks returned. [Stefan Eissing] 
+  
   *) mod_dav: Add support for childtags to dav_error.
      [Jari Urpalainen <jari.urpalainen nokia.com>]
 
