Add -DDUMP_INCLUDES configtest option to show the tree of Included configuration files.
Example:

    Included configuration files:
      (*) .../conf/httpd.conf
        (517) .../conf/extra/proxy-html.conf
          (91) /dev/null



Submitted By: Jacob Champion <champion.pxi gmail.com>
Committed By: covener





git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1747808 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) core: Add -DDUMP_INCLUDES configtest option to show the tree
+     of Included configuration files.  [Jacob Champion <champion.pxi gmail.com>]
+
   *) mod_proxy_http2: properly care for HTTP2 flow control of the frontend
      connection is HTTP/1.1. [Patch supplied by Evgeny Kotkov]
      
