--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_dav: Add dav_get_provider_name() function to obtain the name
+     of the provider from mod_dav.
+     [Jari Urpalainen <jari.urpalainen nokia.com>]
+
   *) mod_proxy_fcgi: Avoid passing a filename of proxy:fcgi:// as
      SCRIPT_FILENAME to a FastCGI server. PR59618.
      [Jacob Champion <champion.pxi gmail.com>]
