core: Add -DDUMP_INCLUDES configtest to show the Include tree.
     Example:

        Included configuration files:
          (*) .../conf/httpd.conf
            (517) .../conf/extra/proxy-html.conf
              (91) /dev/null

Submitted by: Jacob Champion <champion.pxi gmail.com>
Reviewed by: covener, gsmith, minfrin


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1748327 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,10 @@
 
 Changes with Apache 2.4.21
 
+  *) core: Add -DDUMP_INCLUDES configtest option to show the tree
+     of Included configuration files.
+     [Jacob Champion <champion.pxi gmail.com>]
+
   *) mod_proxy_fcgi: Avoid passing a filename of proxy:fcgi:// as
      SCRIPT_FILENAME to a FastCGI server. PR59618.
      [Jacob Champion <champion.pxi gmail.com>]
