mod_cache: Fix (max-stale with no '=') and enforce (check integers after '=') Cache-Control header parsing.
Submitted by: jailletc36
Reviewed by: jim, minfrin


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1748330 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,10 @@
 
 Changes with Apache 2.4.21
 
+  *) mod_cache: Fix (max-stale with no '=') and enforce (check
+     integers after '=') Cache-Control header parsing.
+     [Christophe Jaillet]
+
   *) core: Add -DDUMP_INCLUDES configtest option to show the tree
      of Included configuration files.
      [Jacob Champion <champion.pxi gmail.com>]
