mod_userdir: Constify and save a few bytes in the conf pool when parsing "UserDir" directive
Submitted by: jailletc36
Reviewed by: jim, minfrin


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1748332 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 
 Changes with Apache 2.4.21
 
+  *) mod_userdir: Constify and save a few bytes in the conf pool when
+     parsing the "UserDir" directive. [Christophe Jaillet]
+
   *) mod_cache: Fix (max-stale with no '=') and enforce (check
      integers after '=') Cache-Control header parsing.
      [Christophe Jaillet]
