mpm_event, mpm_worker: Fix computation of MinSpareThreads' lower bound according the number of listeners buckets.
Submitted by: ylavic
Reviewed by: jim, minfrin


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1748336 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 
 Changes with Apache 2.4.21
 
+  *) mpm_event, mpm_worker: Fix computation of MinSpareThreads' lower bound
+     according the number of listeners buckets.  [Yann Ylavic]
+
   *) Add ap_cstr_casecmp[n]() - placeholder of apr_cstr_casecmp[n] functions
      for case-insensitive C/POSIX-locale token comparison.
      [Jim Jagielski, William Rowe, Yann Ylavic, Branko Čibej]
