--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) core: Drop an invalid Last-Modified header value coming
+     from a FCGI/CGI script instead of replacing it with Unix epoch.
+     [Luca Toscano]
+
   *) mod_dav: Allow other modules to become providers and add ACLs
      to the DAV response.
      [Jari Urpalainen <jari.urpalainen nokia.com>, Graham Leggett]
