--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
                                                          -*- coding: utf-8 -*-
 
+Changes with Apache 2.4.22
+
 Changes with Apache 2.4.21
 
   *) mod_http2: more rigid error handling in DATA frame assembly, leading
