--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 
 Changes with Apache 2.4.22
 
+  *) mod_http2: fix for request abort when connections drops, introduced in
+     1.5.8
+
 Changes with Apache 2.4.21
 
   *) mod_http2: more rigid error handling in DATA frame assembly, leading
