--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 
+Changes with Apache 2.4.23
+
+
 Changes with Apache 2.4.22
 
   *) mod_http2: fix for request abort when connections drops, introduced in
