Add CHANGES entry for r1749401
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1749404 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_sed: Fix 'x' command processing. [Christophe Jaillet]
+
   *) core: Drop an invalid Last-Modified header value coming
      from a FCGI/CGI script instead of replacing it with Unix epoch.
      [Luca Toscano]
