--- a/CHANGES
+++ b/CHANGES
@@ -2,8 +2,8 @@
 
 Changes with Apache 2.4.23
 
-  *) configure: Fix rare potential configure failure around
-     dependencies and mod_proxy_hcheck. [William Rowe]
+  *) configure: Fix ./configure edge-case failures around dependencies
+     of mod_proxy_hcheck. [William Rowe, Ruediger Pluem]
 
 Changes with Apache 2.4.22
 
