configure: Do not treat dependency exceptions with --enable-modules of only 'few' or 'none' as fatal, but continue the ./configure
Submitted by: trawick
Backports: r1396440 [only the acinclude.m4, config5.m4 change was N/A]
Reviewed by: wrowe, rpluem, ylavic



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1750254 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,7 @@
 Changes with Apache 2.4.23
 
   *) configure: Fix ./configure edge-case failures around dependencies
-     of mod_proxy_hcheck. [William Rowe, Ruediger Pluem]
+     of mod_proxy_hcheck. [William Rowe, Ruediger Pluem, Jeff Trawick]
 
 Changes with Apache 2.4.22
 
