mod_substitute: Allow to configure the patterns merge order with the new SubstituteInheritBefore on|off directive (with default in 2.2 of 'off)
Backports: r1684900, r1687539, r1687680, r1688331, r1688339, r1688340, r1688343,
           r1697013, r1697015
PR: 57641
Submitted by: 
     [Marc.Stern <Marc.Stern approach.be>, Yann Ylavic, William Rowe]



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@1750835 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.2.32
 
+  *) mod_substitute: Allow to configure the patterns merge order with the new
+     SubstituteInheritBefore on|off directive.  PR 57641
+     [Marc.Stern <Marc.Stern approach.be>, Yann Ylavic, William Rowe]
+
   *) abs: Include OPENSSL_Applink when compiling on Windows, to resolve
      failures under Visual Studio 2015 and other mismatched MSVCRT flavors.
      PR59630 [Jan Ehrhardt <phpdev ehrhardt.nl>]
