mime.types: Add common extension "m4a" for MPEG 4 Audio. As a reference see Wikipedia: https://en.wikipedia.org/wiki/MPEG-4_Part_14#.MP4_versus_.M4A
Submitted by: Dylan Millikin <dylan.millikin gmail.com>
PR: 57895
Backports: r1723567
Reviewed by: rjung, wrowe, ylavic



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@1750837 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.2.32
 
+  *) mime.types: add common extension "m4a" for MPEG 4 Audio.
+     PR 57895 [Dylan Millikin <dylan.millikin gmail.com>]
+
   *) mod_proxy: don't recyle backend announced "Connection: close" connections
      to avoid reusing it should the close be effective after some new request
      is ready to be sent.  [Yann Ylavic]
