--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 
+Changes with Apache 2.4.24
+
+
 Changes with Apache 2.4.23
 
   *) mod_ssl: reset client-verify state of ssl when aborting renegotiations.
