--- a/CHANGES
+++ b/CHANGES
@@ -15,7 +15,7 @@ Changes with Apache 2.5.0
 
   *) core: Drop an invalid Last-Modified header value coming
      from a FCGI/CGI script instead of replacing it with Unix epoch.
-     [Luca Toscano]
+     [Yann Ylavic, Luca Toscano]
 
   *) mod_dav: Allow other modules to become providers and add ACLs
      to the DAV response.
