--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_crypto: Add the all purpose crypto filters with support for HLS.
+     [Graham Leggett]
+
   *) ab: Add option -I to use the Server Name Indication (SNI) extension on
      outgoing TLS connections, according to the Host header (if any) or the
      requested URL's hostname otherwise.  [Yann Ylavic]
