--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 Changes with Apache 2.5.0
 
   *) mod_proxy_fcgi: read the whole FCGI response even when the content has
-     not been modified (HTTP 304) to avoid subsequent bougus reads and
+     not been modified (HTTP 304) to avoid subsequent bogus reads and
      confusing error messages logged. [Luca Toscano]
 
   *) mod_http2: removing timeouts on master connection while requests are
