* Add missing CHANGES entry for r1757662.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1757663 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_proxy_hcheck: Set health check URI and expression correctly for health
+     check worker. PR 60038 [zdeno <zdeno@scnet.sk>]
+
   *) mod_cache: Use the actual URI path and query-string for identifying the
      cached entity (key), such that rewrites are taken into account when
      running afterwards (CacheQuickHandler off).  PR 21935.  [Yann Ylavic]
