Updated the changelog to reflect last commits about Last-Modified header handling.
Added William and Jacob to the list of authors to reflect
their participation and suggestions given in the dev@'s email thread (thanks!).



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1758034 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -46,9 +46,9 @@ Changes with Apache 2.5.0
 
   *) core: Drop an invalid Last-Modified header value coming
      from a FCGI/CGI script instead of replacing it with Unix epoch.
-     Warn the users about Last-Modified header value replacements and 
-     improved handling of non-GMT datestr.
-     [Yann Ylavic, Luca Toscano]
+     Warn the users about Last-Modified header value replacements
+     and violations of the RFC.
+     [Yann Ylavic, Luca Toscano, William Rowe, Jacob Champion]
 
   *) mod_dav: Allow other modules to become providers and add ACLs
      to the DAV response.
